(executables
 (names main)
 (public_names bench-pack)
 (modules main import)
 (package irmin-bench)
 (preprocess
  (pps ppx_deriving_yojson ppx_repr))
 (libraries irmin-pack irmin-test.bench lwt
   unix cmdliner logs yojson ppx_deriving_yojson memtrace repr ppx_repr
   bench_common))

(library
 (name bench_common)
 (modules bench_common)
 (libraries irmin-pack unix progress progress.unix uuidm))

;; Require the above executables to compile during tests

(rule
 (alias runtest)
 (package irmin-bench)
 (deps main.exe tree.exe)
 (action (progn)))

(executable
 (name tree)
 (modules tree)
 (preprocess
  (pps ppx_deriving_yojson ppx_repr))
 (libraries irmin-pack irmin-test.bench lwt
   unix cmdliner logs yojson ppx_deriving_yojson memtrace repr ppx_repr
   bench_common mtime mtime.clock.os bentov tezos-context-hash))
